# CLI-apps

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
boggle/: Cargo.toml
boggle/src/: board.rs  main.rs  ui.rs
crates/boggle/src/: board.rs  main.rs  ui.rs
crates/chat/: .env  Cargo.toml  data.db-shm  data.db-wal  justfile  package.json  tailwind.config.ts
crates/chat/migrations/: 20230826161157_create-chats.sql
crates/chat/src/: handler.rs  init.ts  main.rs  style.css
crates/chat/src/handler/: chat.rs  create.rs
crates/chat/src/handler/chat/: delete.rs  messages.rs  rename.rs  send.rs
crates/data-structures/src/: graph.rs  lib.rs  linked_list.rs  main.rs
crates/find_dir/: Cargo.toml
crates/find_dir/src/: main.rs
crates/full-stack-web/: Cargo.toml  package.json  tailwind.config.js
crates/full-stack-web/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs
crates/game-of-life/: Cargo.toml
crates/game-of-life-core/: Cargo.toml
crates/game-of-life-core/src/: lib.rs  state.rs  ui.rs
crates/game-of-life-core/src/state/: tests.rs
crates/game-of-life-gif/: Cargo.toml
crates/game-of-life-gif/src/: main.rs
crates/game-of-life-leptos/: Cargo.toml  style.css
crates/game-of-life-leptos/src/: app.rs  lib.rs  main.rs
crates/game-of-life-terminal/: Cargo.toml
crates/game-of-life-terminal/src/: main.rs  terminal.rs
crates/game-of-life/src/: cell.rs  main.rs  state.rs  ui.rs
crates/game-of-life/src/state/: tests.rs
crates/game-of-life/src/ui/: terminal.rs
crates/game-of-life/src/ui/terminal/: config.rs
crates/html-builder/: Cargo.toml
crates/html-builder/src/: lib.rs
crates/image-to-text/: Cargo.toml
crates/image-to-text/src/: main.rs
crates/image_generation/: Cargo.toml
crates/image_generation/src/: designs.rs  main.rs  prelude.rs  utilities.rs
crates/image_generation/src/designs/: hsl_example.rs  julia_set.rs  simple_example.rs  triangle.rs  waves.rs
crates/is_prime/: Cargo.toml
crates/is_prime/src/: main.rs  primality.rs
crates/parsing-fun/: Cargo.toml
crates/parsing-fun/src/: error.rs  main.rs
crates/pong/: Cargo.toml
crates/pong/src/: game.rs  main.rs  terminal.rs
crates/rendering/: Cargo.toml
crates/rendering/src/: main.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  tests.rs
crates/router_macros/: Cargo.toml
crates/router_macros/src/: lib.rs
crates/web/: Cargo.toml  init.ts  package.json  style.css  tailwind.config.js
crates/web/src/: app.rs  lib.rs  main.rs
crates/webgl/: Cargo.toml  index.html  init.ts  package.json  serve.ts
crates/webgl/src/: lib.rs  main.rs  positions.rs
crates/wgpu-experiments/: Cargo.toml
crates/wgpu-experiments/src/: grid.wgsl  main.rs  pipeline.rs  renderer.rs  shader.wgsl  window.rs
crates/wgpu-experiments/src/renderer/: bind_group.rs  buffer.rs  texture.rs
find_dir/: Cargo.toml
find_dir/src/: autocomplete.rs
is_prime/: Cargo.toml
is_prime/src/: main.rs  primality.rs
path_utils/: Cargo.toml
path_utils/src/: main.rs
