[workspace]
members = [
    "crates/*",
]

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
tui = "0.19"
crossterm = "0.26"
lazy_static = "1.4"
reqwest = "0.11"
itertools = "0.10"
thiserror = "1.0"
nom = "7.1"
# Image processing
palette = "0.6"
image = "0.24"
imageproc = "0.23"
# Parallel/concurrent utilities + runtimes
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rayon = "1.6"
num-complex = "0.4"