[workspace]
members = ["crates/*"]

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
tui = "0.19"
crossterm = "0.26"
lazy_static = "1.4"
itertools = "0.11"
thiserror = "1"
nom = "7.1"
log = "0.4"
env_logger = "0.10"

wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }

serde = { version = "1", features = ["rc", "derive"] }
http-serde = "1.1"

http = "0.2"
reqwest = "0.11"
hyper = { version = "0.14", features = ["full"] }

palette = "0.6"
image = "0.24"
imageproc = "0.23"

tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
futures = "0.3"
futures-lite = "2.0"
rayon = "1.6"
num-complex = "0.4"

sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid"] }
uuid = { version = "1.4", features = ["serde"] }
