[package]
name = "full-stack-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.2", default-features = false, features = ["serde", "stable"] }
leptos_axum = { version = "0.2", optional = true }
leptos_meta = { version = "0.2", default-features = false, features = ["stable"] }
leptos_router = { version = "0.2", default-features = false, features = ["stable"] }
cfg-if = "1"
log = "0.4"
thiserror = "1.0"
http = "0.2"
game-of-life-core = { path = "../game-of-life-core" }
# server
axum = { version = "0.6", optional = true }
tower = { version = "0.4", optional = true }
tokio = { version = "1.26", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
simple_logger = { version = "4", optional = true }
mime = "0.3"
mime_guess = "2.0"
# client
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }


[features]
# client code
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:console_log",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen"
]
# server code
ssr = [
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:axum", 
    "dep:tokio", 
    "dep:tower", 
    "dep:tower-http", 
    "dep:leptos_axum", 
    "dep:tracing",
    "dep:simple_logger"
]
default = ["ssr", "hydrate"]

[package.metadata.cargo-all-features]
denylist = [
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "leptos_axum",
]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "full-stack-web"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
style-file = ".style/output.css"
