[package]
name = "game-of-life-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
game-of-life-core = { path = "../game-of-life-core" }
crossterm = { workspace = true, features = ["event-stream"] }
tokio = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
nom = { workspace = true }
nom-supreme = "0.8"
