[package]
name = "game-of-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { workspace = true }
crossterm = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
