[package]
name = "image_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { workspace = true }
palette = { workspace = true }
rayon = { workspace = true }
imageproc = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
