[package]
name = "is_prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
integer-sqrt = "0.1"
rayon = "1.5"
num-bigint = { version = "0.4", features = ["rand"] }
