[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
warp = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = "0.3"

[dependencies]
base64 = "0.21"
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
sycamore = { version = "0.8", features = ["ssr", "hydrate", "suspense"] }
